<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ SPDX-FileCopyrightText: 2015 - 2026 Rime community
  ~ SPDX-License-Identifier: GPL-3.0-or-later
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.ClipSearchActivity">

    <EditText
        android:id="@+id/clip_search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawableTint="?android:attr/textColorSecondary"
        android:drawablePadding="8dp"
        android:gravity="top|start"
        android:hint="@string/clipboard_search_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1">

        <requestFocus />
    </EditText>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/clip_search_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

        <ProgressBar
            android:id="@+id/clip_search_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/clip_search_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clipboard_search_no_results"
            android:textSize="14sp"
            android:visibility="gone" />

    </FrameLayout>

    <Button
        android:id="@+id/clip_search_cancel"
        style="?android:attr/buttonBarNegativeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:text="@string/cancel" />

</LinearLayout>
